modular8/service.yaml
apiVersion: V1
kind: Service
metadata:
  name: httpserver
spec:
  ports:
    -name: http
     port: 80
     protocol: TCP
     targetPort: 8080
  selector:
    app: httpserver
  type: ClusterIP
